added functionality in CHANGES.md 0.2.0

--- a/examples/chd_cluster_notebook.ipynb
+++ b/examples/chd_cluster_notebook.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "traj_parent_dir = '/users/kyleacheson/CHD_TRAJS/'\n",
     "traj_paths = natsorted([traj_parent_dir+fpath for fpath in os.listdir(traj_parent_dir) if 'xyz' in fpath])# list and sort all files numerically\n",
-    "ensemble = pqt.Ensemble(traj_paths, 'sh')\n",
+    "ensemble = pqt.Ensemble.load_ensemble(traj_paths, 'sh')\n",
     "dt = 0.1 # wrong time is stored in xyz files"
    ]
   },
@@ -35,50 +35,6 @@
    "outputs": [],
    "source": [
     "average_trajectory = ensemble.average_()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "solved-sacrifice",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mol = ensemble.trajs[0].geometries[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "played-underground",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = np.array([mol.coordinates[i, :] for i in range(mol.natoms) if mol.atom_labels[i] != 'H'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "previous-franchise",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['C', 'C', 'C', 'C', 'C', 'C']"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def is_hyd(atom):\n",
-    "    \n",
-    "\n",
-    "list(filter(lambda a: a != 'H', mol.atom_labels))"
    ]
   },
   {
